Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -23,20 +23,7 @@
 
 
 
-<p> 
-    <div>
-      <div>
-        <div>
-          <ul>
-            <li>Circle</li>
-            <li>
-            <li>just another jQuery plugin</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-   
-  </p><div>
+<p></p><div>
     <div id="content">
       <div id="circle">
         <img src="https://raw.githubusercontent.com/gpgkd906/Jquery.Circle.js/master/img/main.png">
@@ -159,16 +146,6 @@ cursor : "pointer"</pre>
   </div>
 
 
-
-<p> 
-    <div>
-      <p>powered by gpgkd906</p>
-      <p>Code licensed under the
-        <a href="https://github.com/angular/angular.js/blob/master/LICENSE" target="_blank">The
-          MIT License</a>
-      </p>
-    </div>
-   </p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gpgkd906/Jquery.Circle.js">Jquery.circle.js</a> is maintained by <a href="https://github.com/gpgkd906">gpgkd906</a>.</span>
