--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <link rel="stylesheet" href="style/style.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="js/jquery.circle.js"></script>
+<style>
+  .circle {
+        width: 100%;
+  }
+</style>
 </head>
 <body>
 
@@ -22,7 +27,7 @@
   </header>
   <div class="container">
     <div id="content">
-      <div id="circle">
+      <div id="circle" class="circle">
         <a class="main"><img src="img/main.png" ></a>
         <a class="menu" href=""><img src="img/home.png" ></a>
         <a class="menu" href=""><img src="img/profile.png" ></a>
@@ -33,7 +38,7 @@
         <a class="menu" href=""><img src="img/config.png" ></a>
         <a class="menu" href=""><img src="img/add.png" ></a>
       </div>
-      <div id="circle2">
+      <div id="circle2" class="circle">
         <a class="main"><img src="img/main.png" ></a>
         <a class="menu" href=""><img src="img/home.png" ></a>
         <a class="menu" href=""><img src="img/profile.png" ></a>
@@ -44,7 +49,7 @@
         <a class="menu" href=""><img src="img/config.png" ></a>
         <a class="menu" href=""><img src="img/add.png" ></a>
       </div>
-      <div id="circle3">
+      <div id="circle3" class="circle">
         <a class="main"><img src="img/main.png" ></a>
         <a class="menu" href=""><img src="img/home.png" ></a>
         <a class="menu" href=""><img src="img/profile.png" ></a>
@@ -55,7 +60,7 @@
         <a class="menu" href=""><img src="img/config.png" ></a>
         <a class="menu" href=""><img src="img/add.png" ></a>
       </div>      
-      <div id="circle4">
+      <div id="circle4" class="circle">
         <a class="main"><img src="img/main.png" ></a>
         <a class="menu" href=""><img src="img/home.png" ></a>
         <a class="menu" href=""><img src="img/profile.png" ></a>
