--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <link rel="stylesheet" href="style/bootstrap.css">
 <link rel="stylesheet" href="style/style.css">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="js/jquery.circle.js"></script>
 <style>
   .circle {
